[gd_scene load_steps=14 format=2]

[ext_resource path="res://assets/sprites/parrot_reference.png" type="Texture" id=1]
[ext_resource path="res://Scripts/Parrot.gd" type="Script" id=2]

[sub_resource type="AtlasTexture" id=8]
flags = 4
atlas = ExtResource( 1 )
region = Rect2( 0, 0, 95, 73 )

[sub_resource type="AtlasTexture" id=9]
flags = 4
atlas = ExtResource( 1 )
region = Rect2( 95, 0, 95, 73 )

[sub_resource type="AtlasTexture" id=10]
flags = 4
atlas = ExtResource( 1 )
region = Rect2( 190, 0, 95, 73 )

[sub_resource type="AtlasTexture" id=11]
flags = 4
atlas = ExtResource( 1 )
region = Rect2( 285, 0, 95, 73 )

[sub_resource type="AtlasTexture" id=12]
flags = 4
atlas = ExtResource( 1 )
region = Rect2( 380, 0, 95, 73 )

[sub_resource type="AtlasTexture" id=13]
flags = 4
atlas = ExtResource( 1 )
region = Rect2( 475, 0, 95, 73 )

[sub_resource type="AtlasTexture" id=14]
flags = 4
atlas = ExtResource( 1 )
region = Rect2( 570, 0, 95, 73 )

[sub_resource type="AtlasTexture" id=15]
flags = 4
atlas = ExtResource( 1 )
region = Rect2( 665, 0, 95, 73 )

[sub_resource type="AtlasTexture" id=16]
flags = 4
atlas = ExtResource( 1 )
region = Rect2( 760, 0, 95, 73 )

[sub_resource type="SpriteFrames" id=17]
animations = [ {
"frames": [ SubResource( 8 ), SubResource( 9 ), SubResource( 10 ), SubResource( 11 ), SubResource( 12 ), SubResource( 13 ), SubResource( 14 ), SubResource( 15 ), SubResource( 16 ) ],
"loop": true,
"name": "fly",
"speed": 5.0
} ]

[sub_resource type="CapsuleShape2D" id=6]
radius = 6.0
height = 34.0

[node name="Parrot" type="Node2D" groups=["ships"]]
script = ExtResource( 2 )

[node name="AnimatedSprite" type="AnimatedSprite" parent="."]
scale = Vector2( 0.69863, 0.69863 )
frames = SubResource( 17 )
animation = "fly"
centered = false

[node name="OffScreenTimer" type="Timer" parent="."]
one_shot = true

[node name="LeftSail" type="Area2D" parent="."]
position = Vector2( 11, 21 )
collision_layer = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="LeftSail"]
position = Vector2( 5, 5 )
shape = SubResource( 6 )

[node name="RightSail" type="Area2D" parent="."]
position = Vector2( 48, 21 )
collision_layer = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="RightSail"]
position = Vector2( 2, 6 )
shape = SubResource( 6 )

[node name="BreakFreeTimer" type="Timer" parent="."]
wait_time = 3.0

[connection signal="timeout" from="OffScreenTimer" to="." method="_on_OffScreenTimer_timeout"]
[connection signal="body_entered" from="LeftSail" to="." method="_on_LeftSail_body_entered"]
[connection signal="body_entered" from="RightSail" to="." method="_on_RightSail_body_entered"]
[connection signal="timeout" from="BreakFreeTimer" to="." method="_on_BreakFreeTimer_timeout"]
